# Imperial-Command-Public-Test

./: BOOK_WRITER_README.md  BOT_NATIVE_RENDERER_README.md  BUILD_VERSION_1.bat  CASINO_README.md  CHEST_LEDGER_README.md  Caddyfile  Caddyfile.example  Caddyfile.localhost.example  Caddyfile_443_only.example  Cargo.toml  DISCORD_BOT_README.md  DISCORD_SHOP_ROLE_REWARDS_README.md  FAQ_GREETER_COMMANDS_README.md  FAQ_GREETER_FIX_README.md  FAQ_NUMBERED_COMMANDS_README.md  PUBLIC_COMMAND_CENTER_README.md  PUBLIC_SOURCE_README.md  README.md  README_HTTPS_CADDY.md  REFINED_26_2_BUILD_README.md  REFINE_26_2_PORT_NOTES.md  START_HOST_GUI_HIDDEN.vbs  VERSION.txt  VERSION_QPREFIX_NUMBERED_FAQ.txt  XAERO_IMPORTER_README.txt  build_version1.ps1  config.json  host_control_gui.bat  host_control_gui.ps1  host_control_gui_hidden.bat  import_xaero_waypoints.bat  import_xaero_waypoints.ps1  install_caddy_windows.ps1  public_faqs.json  public_login_greeters.json  pull_pearl.ps1  pull_pearl.sh  start_bot_logged.bat  start_bot_logged.ps1  start_caddy.ps1  (+6 more)
discord_bot/: discord_bot.js  discord_config.example.json  package.json  start_discord_bot.bat
src/: bot_driver.rs  casino.rs  main.rs  models.rs  routes.rs  storage.rs
static/: index.html
